Fix openstax books alignment
[#183298159]

--- a/src/components/openstax/bookList/style.module.less
+++ b/src/components/openstax/bookList/style.module.less
@@ -6,6 +6,7 @@
   display: grid;
   grid-gap: 1.5rem;
   position: relative;
+  align-content: start;
 
   &:before {
     content: '';
